--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -3,9 +3,25 @@
 }
 
 body {
-  background-color: red;
+  background-color: black;
 }
 
 h1 {
   color: white;
+}
+
+
+h2 {
+  color: white;
+}
+
+
+a {
+  color: Aquamarine;
+  font-size: 16px;
+}
+
+
+.copyright {
+  text-align: right;
 }
