--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,5 +1,7 @@
 * {
   font-family: Verdana;
+  text-align: center;
+  color: grey;
 }
 
 body {
@@ -8,11 +10,15 @@ body {
 
 h1 {
   color: white;
+  font-size: 50px;
+  font-weight: normal;
 }
 
 
 h2 {
   color: white;
+  font-size: 42px;
+  font-weight: 300;
 }
 
 
@@ -24,4 +30,5 @@ a {
 
 .copyright {
   text-align: right;
+  color: grey;
 }
